--- a/webgl/jaws/style.css
+++ b/webgl/jaws/style.css
@@ -13,6 +13,7 @@ body, #container3D {
 .bubble {
 	position: absolute;
 	width: 120px;
+	pointer-events: none;
 }
 .bubble__text-container {
 	position: relative;
@@ -66,6 +67,9 @@ body, #container3D {
 .bubble__button-delete:hover {
 	color: white;
 	background-color: red;
+}
+.bubble__text, .bubble__button-delete {
+	pointer-events: auto;
 }
 #loading {
 	position: absolute;
