--- a/webgl/energy/style.css
+++ b/webgl/energy/style.css
@@ -5,10 +5,10 @@
 }
 body {
 	font-family: sans-serif;
-	height: 100%;
 	background: linear-gradient(-60deg, #1d0006, #00011d);
-/*	background-repeat: no-repeat;*/
+	background-repeat: no-repeat;
 	background-attachment: fixed;
+	background-color: #777700;
 }
 body, #container3D {
 	overflow: hidden;
@@ -16,45 +16,63 @@ body, #container3D {
 #container3D {
 	line-height: 0;
 }
+.container {
+	display: flex;
+	position: fixed;
+	flex-direction: column;
+	/*	background-color: #393f77;*/
+	width: 100%;
+	height: 100%;
+}
 main {
-	text-align: center;
+	position: relative;
+	flex-grow: 1;
+	width: 100%;
+	/*	background-color: #777777;*/
+	opacity: 1;
 }
 header {
 	text-align: center;
+	/*	background-color: #775342;*/
+	flex-grow: 0;
 }
-main section {
-	position: absolute;
-	padding-top: 20%;
-	/*top: 15%;*/
-	left: 15%;
-	width: 25rem;
-	height: 20rem;
-	margin-bottom: 10px;
-	text-align: left;
-	line-height: normal;
-}
-#text {
-	padding: 0 1rem;
-	text-align: justify;
-	font-size: .9rem;
-	line-height: 1.5;
-}
-h1 {
-	font-size: 2.5rem;
+footer {
 	text-align: center;
-	padding-bottom: 1rem;
-	color: #b6c4ff;
-}
-.container {
-	position: relative;
-	padding-bottom: 20px;
 	color: #ffffff;
+	/*	background-color: #366037;*/
+	flex-grow: 0;
 }
 #SELogo {
 	width: 15rem;
 	height: 7rem;
 }
-#container3D {
-	top: 0;
+#page_num {
+	margin-bottom: 10px;
+}
+#note {
 	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	width: 25rem;
+	text-align: left;
+	/*	background-color: #774756;*/
+}
+.to_right {
+	right: 7%;
+}
+.to_left {
+	left: 7%;
+}
+#note__title {
+	font-size: 2.5rem;
+	text-align: center;
+	padding-bottom: 1rem;
+	color: #b6c4ff;
+}
+#note__text {
+	padding: 0 1rem;
+	text-align: justify;
+	font-size: .9rem;
+	line-height: 1.5;
+	color: #ffffff;
 }
