--- a/webgl/energy/style.css
+++ b/webgl/energy/style.css
@@ -4,7 +4,7 @@
 	background-repeat: no-repeat;
 }
 body {
-	font-family: sans-serif;
+	font-family: "Segoe UI", sans-serif;
 	background: linear-gradient(-60deg, #1d0006, #00011d);
 	background-repeat: no-repeat;
 	background-attachment: fixed;
@@ -17,13 +17,23 @@ body, #container3D {
 	line-height: 0;
 }
 .container {
-	visibility: hidden;
+	/*visibility: hidden;*/
 	display: flex;
 	position: fixed;
 	flex-direction: column;
 	/*	background-color: #393f77;*/
 	width: 100%;
 	height: 100%;
+	user-select: none;
+}
+#redBar {
+	position: absolute;
+	top: 10%;
+	transform: translate(-50%, -50%);
+	left: 80%;
+	width: 300px;
+	height: 150px;
+	background: radial-gradient(ellipse at center, rgba(100,100,209,0.22) 0%,rgba(100,100,209,0.03) 63%,rgba(100,100,209,0.01) 69%,rgba(100,100,209,0) 72%);
 }
 main {
 	position: relative;
@@ -44,28 +54,50 @@ footer {
 	flex-grow: 0;
 }
 #SELogo {
+	visibility: hidden;
 	width: 15rem;
 	height: 7rem;
 }
 #page_num {
+	position: absolute;
+	left: 1%;
+	top: 50%;
+	transform: translateY(-50%);
+}
+#arrow {
 	margin-bottom: 10px;
+}
+#arrow:hover .arrow_cls-1{
+	fill: #5b5bb6;
+	cursor: pointer;
+}
+#share {
+	position: absolute;
+	right: 1%;
+	top: 50%;
+	transform: translateY(-50%);
+}
+#share svg {
+	display: block;
+	cursor: pointer;
+	margin: 18px 0;
 }
 #note {
 	position: absolute;
 	top: 50%;
 	transform: translateY(-50%);
-	width: 25rem;
+	width: 30rem;
 	text-align: left;
 	/*	background-color: #774756;*/
 }
 .to_right {
-	right: 7%;
+	right: 15%;
 }
 .to_left {
-	left: 7%;
+	left: 15%;
 }
 #note__title {
-	font-size: 2.5rem;
+	font-size: 3.0rem;
 	text-align: center;
 	padding-bottom: 1rem;
 	color: #b6c4ff;
@@ -73,7 +105,7 @@ footer {
 #note__text {
 	padding: 0 1rem;
 	text-align: justify;
-	font-size: .9rem;
-	line-height: 1.5;
+	font-size: 0.95rem;
+	line-height: 1.7;
 	color: #ffffff;
 }
