--- a/webgl/energy/style.css
+++ b/webgl/energy/style.css
@@ -47,6 +47,14 @@ body, #container3D {
 	height: 150px;
 	background: radial-gradient(ellipse at center, rgba(100,100,209,0.22) 0%,rgba(100,100,209,0.03) 63%,rgba(100,100,209,0.01) 69%,rgba(100,100,209,0) 72%);
 }
+.under {
+	position: absolute;
+	top: 90%;
+	left: 0;
+	width: 100%;
+	height: 15%;
+	background: radial-gradient(ellipse at center, rgba(100,100,209,0.22) 0%,rgba(100,100,209,0.03) 63%,rgba(100,100,209,0.01) 69%,rgba(100,100,209,0) 72%);
+}
 main {
 	position: relative;
     perspective: 50rem;
